test/fail/mixins/NestedSystem2.mo
import SystemMixin "System";

mixin () {
  include SystemMixin<system>();
}
